--- a/index.css
+++ b/index.css
@@ -150,7 +150,7 @@ body {
   margin-bottom: 30px;
 }
 
-button.btn-primary {
+a.btn-primary {
   background-color: #0056b3;
   border: none;
   padding: 12px 30px;
@@ -159,7 +159,7 @@ button.btn-primary {
   transition: background-color 0.3s ease;
 }
 
-button.btn-primary:hover {
+a.btn-primary:hover {
   background-color: #003366;
 }
 
